--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -97,24 +97,24 @@ http {
         # storage end
 
         # www start
-        # Forward /www to www
-        # location /www {
-        #     proxy_pass http://server-template-www:8080;
-        #     proxy_http_version 1.1;
-        #
-        #     # Remove /www from path
-        #     rewrite ^/www/?(.*) /$1 break;
-        #
-        #     proxy_redirect off;
-        #
-        #     # Headers
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $remote_addr;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $host;
-        #    proxy_cache_bypass $http_upgrade;
-        # }
+        # Forward /docs to www
+        location /docs {
+            proxy_pass http://server-template-www:8080;
+            proxy_http_version 1.1;
+
+            # Remove /docs from path
+            rewrite ^/docs/?(.*) /$1 break;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
         # www end
 
         # admin start
