--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -28,7 +28,7 @@ server-template:
     server: true
     storage: true
     worker: false
-    www: false
+    www: true
     sync: false
 
   # Defaults
@@ -136,6 +136,20 @@ server-template:
   www:
     path: /docs
     tier: frontend
+    sidecar:
+      enabled: false
+      name: webhook
+      path: /webhook
+      port: 9000
+      sharedVolume:
+        mountPath: /service
+        sidecarMountPath: /build
+      livenessDisabled: true
+      secrets:
+        WEBHOOK_URL_PREFIX: ${taito_project}-${taito_env}-webhook.urlprefix
+        WEBHOOK_GIT_TOKEN: ${taito_project}-${taito_env}-webhook.gittoken
+      env:
+        GIT_REPOSITORY_URL: ${taito_vc_repository_url}.git
 
   # TODO: https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#ttl-mechanism-for-finished-jobs
 
