--- a/www/.gitignore
+++ b/www/.gitignore
@@ -1,34 +1,15 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Coverage directory used by tools like istanbul
-coverage
-
-# node-waf configuration
-.lock-wscript
-
-# Dependency directory
 node_modules
 flow-typed/npm
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Generated docs
-docs
 test/reports
 test/screenshots
 test/videos
+test/db.json
 shared
-
+credentials
+*.log
+.DS_Store
+_build
+_build_git
+build
+*.swp
 .vscode
