--- a/www/package.json
+++ b/www/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "server-template-www",
+  "name": "website-template-www",
   "scripts": {
-    "types-install": "echo TODO",
-    "types": "echo TODO",
-    "pretty-quick": "echo TODO",
-    "lint": "echo TODO",
-    "unit": "echo TODO",
-    "start": "echo TODO",
-    "build": "echo TODO",
-    "analyze": "echo TODO"
+    "install-site": "if [ -f ./site/package.json ]; then cd site && npm install; fi",
+    "lint": "echo Linting disabled",
+    "unit": "if [ -d ./site ]; then cd site && npm run test; fi",
+    "test": "echo No tests for www",
+    "build": "./build-site.sh",
+    "cypress:run": "cypress run -s test/integration/**/${test_name}.spec.js",
+    "cypress:open": "cypress open"
+  },
+  "devDependencies": {
+    "cypress": "3.1.4"
   }
 }
