--- a/scripts/helm/charts/server-template/templates/deployment.yaml
+++ b/scripts/helm/charts/server-template/templates/deployment.yaml
@@ -4,9 +4,9 @@
 {{- $provider := .Values.global.zone.provider -}}
 {{- $defaults := .Values.serviceDefaults -}}
 
-{{- range $serviceName, $serviceEnabled := .Values.services }}
-{{- if $serviceEnabled }}
-{{- with (index $root.Values $serviceName) }}
+{{- range $serviceName, $service := .Values.services }}
+{{- with $service }}
+{{- if or (not (hasKey . "enabled")) (.enabled) }}
 {{- if not .type }}
 {{- if .autoscale }}
 apiVersion: autoscaling/v1
@@ -70,6 +70,13 @@ spec:
           {{- end }}
           ports:
             - containerPort: {{ .port | default $defaults.port }}
+          resources:
+            requests:
+              cpu: {{ .cpuRequest | default $defaults.cpuRequest }}
+              memory: {{ .memoryRequest | default $defaults.memoryRequest }}
+            limits:
+              cpu: {{ .cpuLimit | default $defaults.cpuLimit }}
+              memory: {{ .memoryLimit | default $defaults.memoryLimit }}
           {{- if not .livenessDisabled }}
           livenessProbe:
             httpGet:
@@ -89,9 +96,20 @@ spec:
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: /serviceaccount/{{ regexFind "[a-zA-Z]*$" .serviceAccount.secret }}
             {{- end }}
+            {{- range $name, $value := $defaults.env }}
+            - name: {{ $name }}
+              value: {{ $value | quote }}
+            {{- end }}
             {{- range $name, $value := .env }}
             - name: {{ $name }}
               value: {{ $value | quote }}
+            {{- end }}
+            {{- range $name, $value := $defaults.secrets }}
+            - name: {{ $name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ regexReplaceAll "\\.[a-zA-Z]*$" $value "" }}
+                  key: {{ regexFind "[a-zA-Z]*$" $value }}
             {{- end }}
             {{- range $name, $value := .secrets }}
             - name: {{ $name }}
