--- a/scripts/helm/charts/server-template/templates/podsecuritypolicy.yaml
+++ b/scripts/helm/charts/server-template/templates/podsecuritypolicy.yaml
@@ -1,57 +1,58 @@
-# https://docs.bitnami.com/kubernetes/how-to/secure-kubernetes-cluster-psp/
-# https://cloud.google.com/kubernetes-engine/docs/how-to/pod-security-policies
-# https://kubernetes.io/docs/concepts/policy/pod-security-policy/
-
-# TODO use RBAC: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#authorizing-policies
-#
-# apiVersion: policy/v1beta1
-# kind: PodSecurityPolicy
-# metadata:
-#   name: restricted
-#   annotations:
-#     seccomp.security.alpha.kubernetes.io/allowedProfileNames: 'docker/default'
-#     apparmor.security.beta.kubernetes.io/allowedProfileNames: 'runtime/default'
-#     seccomp.security.alpha.kubernetes.io/defaultProfileName:  'docker/default'
-#     apparmor.security.beta.kubernetes.io/defaultProfileName:  'runtime/default'
-# spec:
-#   privileged: false
-#   # Required to prevent escalations to root.
-#   allowPrivilegeEscalation: false
-#   # This is redundant with non-root + disallow privilege escalation,
-#   # but we can provide it for defense in depth.
-#   requiredDropCapabilities:
-#     - ALL
-#   # Allow core volume types.
-#   volumes:
-#     - 'configMap'
-#     - 'emptyDir'
-#     - 'projected'
-#     - 'secret'
-#     - 'downwardAPI'
-#     # Assume that persistentVolumes set up by the cluster admin are safe to use.
-#     - 'persistentVolumeClaim'
-#   hostNetwork: false
-#   hostIPC: false
-#   hostPID: false
-#   runAsUser:
-#     # Require the container to run without root privileges.
-#     rule: 'MustRunAsNonRoot'
-#   seLinux:
-#     # This policy assumes the nodes are using AppArmor rather than SELinux.
-#     rule: 'RunAsAny'
-#   supplementalGroups:
-#     rule: 'MustRunAs'
-#     ranges:
-#       # Forbid adding the root group.
-#       - min: 1
-#         max: 65535
-#   fsGroup:
-#     rule: 'MustRunAs'
-#     ranges:
-#       # Forbid adding the root group.
-#       - min: 1
-#         max: 65535
-#   readOnlyRootFilesystem: false
-#   hostPorts:
-#   - min: 0
-#     max: 0
+{{- if .Values.podSecurityPolicy.enabled}}
+apiVersion: policy/v1beta1
+kind: PodSecurityPolicy
+metadata:
+  name: {{ template "fullname" . }}-restricted
+  labels:
+    app: {{ template "name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+  annotations:
+    seccomp.security.alpha.kubernetes.io/allowedProfileNames: 'docker/default'
+    apparmor.security.beta.kubernetes.io/allowedProfileNames: 'runtime/default'
+    seccomp.security.alpha.kubernetes.io/defaultProfileName:  'docker/default'
+    apparmor.security.beta.kubernetes.io/defaultProfileName:  'runtime/default'
+spec:
+  privileged: false
+  # Required to prevent escalations to root.
+  allowPrivilegeEscalation: false
+  # This is redundant with non-root + disallow privilege escalation,
+  # but we can provide it for defense in depth.
+  requiredDropCapabilities:
+    - ALL
+  # Allow core volume types.
+  volumes:
+    - 'configMap'
+    - 'emptyDir'
+    - 'projected'
+    - 'secret'
+    - 'downwardAPI'
+    # Assume that persistentVolumes set up by the cluster admin are safe to use.
+    - 'persistentVolumeClaim'
+  hostNetwork: false
+  hostIPC: false
+  hostPID: false
+  runAsUser:
+    # Require the container to run without root privileges.
+    rule: 'MustRunAsNonRoot'
+  seLinux:
+    # This policy assumes the nodes are using AppArmor rather than SELinux.
+    rule: 'RunAsAny'
+  supplementalGroups:
+    rule: 'MustRunAs'
+    ranges:
+      # Forbid adding the root group.
+      - min: 1
+        max: 65535
+  fsGroup:
+    rule: 'MustRunAs'
+    ranges:
+      # Forbid adding the root group.
+      - min: 1
+        max: 65535
+  readOnlyRootFilesystem: false
+  hostPorts:
+  - min: 0
+    max: 0
+{{- end }}
