--- a/scripts/helm-prod.yaml
+++ b/scripts/helm-prod.yaml
@@ -1,7 +1,7 @@
 # NOTE: Here you can override default settings for production environment.
 # For example, you can diable basic authentication here.
 
-server-template:
+full-stack:
   ingress:
     basicAuth:
       # enabled: false
