--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
     "install:clean": "rm -rf node_modules && npm install",
     "pretty-quick": "pretty-quick",
     "lint": "eslint ./src/**/*.{ts,tsx} --ignore-path .eslintignore --quiet",
-    "unit": "echo TODO BABEL_ENV=test jest",
+    "unit": "BABEL_ENV=test jest",
     "test": "echo TODO run tests but not cypress",
     "cypress:run": "cypress run -s test/integration/**/${test_name}.spec.js",
     "cypress:open": "cypress open",
