feat: add i18n support

--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,20 @@
     "cypress:open": "cypress open",
     "start": "NODE_ENV=development webpack-dev-server --env.development",
     "build": "NODE_ENV=production webpack -p --env.production",
-    "analyze": "ANALYZE_BUNDLE=true npm run build"
+    "analyze": "ANALYZE_BUNDLE=true npm run build",
+    "lang:add-locale": "lingui add-locale",
+    "lang:extract": "lingui extract",
+    "lang:compile": "lingui compile"
   },
   "dependencies": {
     "@babel/polyfill": "7.4.0",
+    "@lingui/react": "2.7.4",
     "@material-ui/core": "3.7.1",
     "@material-ui/icons": "3.0.1",
     "@sentry/browser": "4.6.6",
+    "@types/lingui__core": "2.7.0",
+    "@types/lingui__macro": "2.7.3",
+    "@types/lingui__react": "2.5.2",
     "@types/react": "16.8.10",
     "@types/react-dom": "16.8.3",
     "@types/react-redux": "7.0.6",
@@ -49,6 +56,9 @@
     "@babel/preset-env": "7.4.2",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
+    "@lingui/cli": "2.7.4",
+    "@lingui/loader": "2.7.4",
+    "@lingui/macro": "2.7.4",
     "@types/jest": "24.0.11",
     "@typescript-eslint/eslint-plugin": "1.5.0",
     "@typescript-eslint/parser": "1.5.0",
