--- a/storage/Dockerfile
+++ b/storage/Dockerfile
@@ -1,5 +1,5 @@
 # Builder, tester and runtime container for local development
-FROM minio/minio:latest
+FROM minio/minio:RELEASE.2019-03-27T22-35-21Z
 ARG SERVICE_DIR=.
 WORKDIR /service
 COPY ${SERVICE_DIR} /service
