--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
     "@lingui/loader": "2.7.4",
     "@lingui/macro": "2.7.4",
     "@types/jest": "24.0.11",
+    "@types/node": "11.13.0",
     "@typescript-eslint/eslint-plugin": "1.5.0",
     "@typescript-eslint/parser": "1.5.0",
     "babel-core": "7.0.0-bridge.0",
@@ -86,12 +87,12 @@
     "file-loader": "3.0.1",
     "fork-ts-checker-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.5.0",
+    "jest": "24.7.0",
     "jest-dom": "3.1.3",
     "mini-css-extract-plugin": "0.5.0",
     "pg-promise": "8.6.3",
     "prettier": "1.16.4",
-    "react-testing-library": "6.0.3",
+    "react-testing-library": "6.0.4",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
     "ts-jest": "24.0.1",
